# rs-service-template

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.dev  IMPLEMENTATION_SUMMARY.md  Makefile  README-DEVOPS.md  README.md  STRUCTURE.md  docker-compose.yml
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml  dependency-update.yml  pr-checks.yml
config/: dev.toml  prod.toml  staging.toml
crates/application/: Cargo.toml
crates/application/src/: lib.rs  ports.rs  usecases.rs
crates/application/src/dtos/: mod.rs  user_dto.rs
crates/application/src/services/: user_service.rs
crates/domain/: Cargo.toml
crates/domain/src/: error.rs  lib.rs
crates/domain/src/entities/: mod.rs  user.rs
crates/domain/src/repositories/: user_repository.rs
crates/domain/src/value_objects/: email.rs  mod.rs  username.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/migrations/: 20250101000000_create_users_table.sql  20250101000000_init.sql
crates/infrastructure/src/: lib.rs
crates/infrastructure/src/cache/: mod.rs  redis.rs
crates/infrastructure/src/database/: mod.rs  postgres.rs
crates/infrastructure/src/repositories/: mod.rs  postgres_user_repository.rs
crates/presentation/: Cargo.toml
crates/presentation/src/: lib.rs  main.rs
crates/presentation/src/handlers/: mod.rs  user_handlers.rs
crates/presentation/src/routes/: health.rs  mod.rs  user.rs
crates/presentation/src/states/: cache.rs  database.rs  email.rs  jwt.rs  mod.rs
crates/shared/: Cargo.toml
crates/shared/src/: error.rs  lib.rs  tracing_setup.rs  types.rs
crates/shared/src/config/: app.rs  cache.rs  database.rs  mod.rs  server.rs
crates/shared/src/defaults/: cache.rs  database.rs  mod.rs  server.rs
k8s/dev/: configmap.yaml  migration-job.yaml  namespace.yaml
k8s/dev/api/: deployment.yaml  hpa.yaml  service.yaml
k8s/dev/postgres/: service.yaml  statefulset.yaml
k8s/dev/redis/: service.yaml  statefulset.yaml
k8s/prod/: configmap.yaml  migration-job.yaml  namespace.yaml
k8s/prod/api/: deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
k8s/prod/external-services/: postgres-service.yaml  redis-service.yaml
k8s/staging/: configmap.yaml  migration-job.yaml  namespace.yaml
k8s/staging/api/: deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
k8s/staging/postgres/: service.yaml  statefulset.yaml
k8s/staging/redis/: service.yaml  statefulset.yaml
scripts/: build_all.sh  deploy.sh  health_check.sh  init_db.sh
services/api/: Cargo.toml
services/api/src/: http_server.rs  main.rs  route_configuration.rs
services/api/src/states/: mod.rs
services/grpc/: Cargo.toml
