[workspace]
members = [
    "crates/shared",
    "crates/domain",
    "crates/application",
    "crates/infrastructure",
    "crates/presentation"
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
ulid = "1"
time = { version = "0.3", features = ["serde", "macros"] }
config = "0.14"

# DB & MQ (used via features in crates)
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "macros", "chrono", "uuid", "json"] }
tiberius = { version = "0.12", default-features = false, features = ["rustls"] }
lapin = { version = "2", default-features = false, features = ["rustls"] }
redis = { version = "0.25", default-features = false, features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Web
actix-web = "4"
actix-utils = "3"
actix-web-httpauth = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }

# Test
testcontainers = "0.16"
