[workspace]
resolver = "3"
members = [
    "crates/application", 
    "crates/domain", 
    "crates/infrastructure", 
    "crates/presentation", 
    "crates/shared", 
    "services/api",
    "services/grpc", 
    "services/cli", 
    "services/worker", 
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["omerekmen <omer@omerekmen.com>"]

[workspace.dependencies]
application = { path = "crates/application" }
domain = { path = "crates/domain" }
infrastructure = { path = "crates/infrastructure" }
presentation = { path = "crates/presentation" }
shared = { path = "crates/shared" }

serde = "1.0.228"
serde_json = "1.0.145"
tracing = "0.1.43"
actix-web = "4.12.1"
sqlx = "0.8.6"
deadpool-redis = "0.22.0"
