[workspace]
resolver = "3"
members = [
    "crates/application", 
    "crates/domain", 
    "crates/infrastructure", 
    "crates/presentation", 
    "crates/shared", 
    "services/api",
    "services/grpc", 
    "services/cli", 
    "services/worker", 
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["omerekmen <omer@omerekmen.com>"]

[workspace.dependencies]
application = { path = "crates/application" }
domain = { path = "crates/domain" }
infrastructure = { path = "crates/infrastructure" }
presentation = { path = "crates/presentation" }
shared = { path = "crates/shared" }

serde = "1.0.228"
serde_json = "1.0.145"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json"] }
actix-web = "4.12.1"
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "uuid",
    "chrono",
    "migrate"
] }
deadpool-redis = "0.22.0"
