[package]
name = "presentation"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
application = { path = "../application" }
infrastructure = { path = "../infrastructure" }
actix-web = { workspace = true }
actix-web-httpauth = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing-actix-web = "0.7.19"
