[package]
name = "presentation"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
actix-web = { workspace = true }
sqlx = { workspace = true }
deadpool-redis = { workspace = true }

shared = { workspace = true }
infrastructure = { workspace = true }
