[package]
name = "presentation"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
actix-web = { workspace = true }
sqlx = { workspace = true }
deadpool-redis = { workspace = true }
tracing = { workspace = true }

shared = { workspace = true }
domain = { path = "../domain" }
application = { path = "../application" }
infrastructure = { workspace = true }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
