[package]
name = "api"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
shared = { workspace = true }
infrastructure = { workspace = true }
presentation = { workspace = true }
application = { workspace = true }
domain = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
actix-web = { workspace = true }
sqlx = { workspace = true }
deadpool-redis = { workspace = true }

actix-cors = "0.7.1"
tracing = { workspace = true }


